2006-02-17 Braden McDaniel  <braden@endoframe.com>

	Define openvrml::vec2f, openvrml::vec2d, openvrml::vec3f, and
	openvrml::vec3d as classes rather than class template instances.
	The approach of keeping the function template definitions in the
	implementations and providing explicit template instantiations
	plays poorly with gcc's symbol visibility (and culling) machinery.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/basetypes.h

2006-02-17 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(text_node::update_face()): Moved FontconfigError and
	FreeTypeError exception classes out of the function so that they
	can be template parameters; that is, so they can be used with
	boost::ignore_unused_variable_warning.

2006-02-16 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Require automake 1.9 (for tar-pax option).

2006-02-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/script.cpp: Use
	boost::polymorphic_downcast where appropriate.

2006-02-14 Braden McDaniel  <braden@endoframe.com>

	Ensure that externproto_node_type and externproto_node references
	are cleared even if PROTO loading fails.

	* src/libopenvrml/openvrml/browser.cpp
	(externproto_node_class): Inherit boost::enable_shared_from_this.
	Changed proto_node_class_ from a shared_ptr to a weak_ptr.
	Changed externproto_node_types_ from a vector of shared_ptrs to a
	vector of weak_ptrs.  Added member
	externproto_node_types_cleared_.  Added member functions
	externproto_node_types_cleared and clear_externproto_node_types.
	(externproto_node_type): Added member node_class_.  Added member
	function clear_externproto_nodes.
	(externproto_node_class::load_proto::operator()() const): Use a
	scope_guard to call
	externproto_node_class::clear_externproto_node_types; this
	function should be called regardless of whether a PROTO is
	successfully loaded.
	(externproto_node_class::externproto_node_class(openvrml::scene &,