@@ -1,3 +1,8 @@
+2006-02-18 Braden McDaniel  <braden@endoframe.com>
+
+	* src/libopenvrml/private.h: Forward declare field_value types to
+	avoid depencency on <openvrml/field_value.h>.
+
 2006-02-17 Braden McDaniel  <braden@endoframe.com>
 
 	Define openvrml::vec2f, openvrml::vec2d, openvrml::vec3f, and
